2001-08-08  Ulrich Drepper  <drepper@redhat.com>

	* locale/C-monetary.c (_nl_C_LC_MONETARY): Provide correct value
	for CRNCYSTR.

	* locale/programs/ld-messages.c (messages_finish): Provide POSIX
	locale compliant default values for fields without definition.
	* locale/programs/ld-time.c (time_finish): Likewise.
	* locale/programs/ld-monetary.c (monetary_finish): Likewise.

2001-08-08  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/ldbl-96/s_ilogbl.c (__ilogbl): Fix test for
	infinity.

2001-08-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/memusage.h (GETTIME): Define using hp-timing.h
	functionality.

	* sysdeps/ia64/hp-timing.h (HP_TIMING_NOW): Fix comment.

2001-08-07  Jakub Jelinek  <jakub@redhat.com>

	* malloc/memusage.c (initialized): New variable.
	(init): If not yet initialized, call me().
	(me): Do all dlsym calls here.
	(malloc, realloc, calloc, free): If not yet initialized,
	call me().  If in the middle of initializing, return NULL or
	do nothing.

2001-08-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/seekdir.c (seekdir): Set dirp->filepos.

	* dirent/tst-seekdir.c (main): Check whether telldir right after
	seekdir returns 2nd argument given to seekdir.

2001-08-07  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* dlfcn/Makefile (tststatic-ENV): Add $(common-objpfx) to
	LD_LIBRARY_PATH.

2001-08-07  Andreas Jaeger  <aj@suse.de>
	    Andreas Schwab  <schwab@suse.de>
	    Bruno Haible  <haible@clisp.cons.org>

	* locale/programs/3level.h (EMPTY): New macro.
	(*_get, *_add, *_iterate, *_finalize): Use it instead of ~(uint32_t) 0.

2001-08-08  GOTO Masanori  <gotom@debian.or.jp>

	* locale/iso-3166.def: Updates from latest official list.

2001-08-07  Andreas Jaeger  <aj@suse.de>

	* stdlib/tst-strtod.c: Disable HUGE_VAL tests for older GCCs.

	* iconv/gconv_charset.h (upstr): Add unused attribute to avoid warning.

	* libio/iopopen.c (_IO_new_proc_open): Fix typos, it's _IO_MTSAFE_IO.
	(_IO_new_proc_close): Likewise.