@@ -1,5 +1,15 @@
 2001-08-08  Ulrich Drepper  <drepper@redhat.com>
 
+	* catgets/open_catalog.c: Rewrite code to assume that the function
+	is called at catopen time and not delayed in catgets.
+	* catgets/catgets.c (catopen): Call __open_catalog and fail if that
+	function failed.
+	(catgets): Remove code for delayed opening of catalog.
+	* catgets/catgetsinfo.h: Remove now unnecessary information from
+	struct catalog_info.  Change __open_catalog prototype.
+	* catgets/gencat.c: Adjust __open_catalog call.
+	* catgets/test-gencat.c: Stop program if catopen failed.
+
 	* locale/C-monetary.c (_nl_C_LC_MONETARY): Provide correct value
 	for CRNCYSTR.
 
